# pdfdo

./: Cargo.toml
src/: cli.rs  main.rs  store.rs
src/store/: cat.rs  task.rs
