[package]
name = "pdfdo"
version = "0.1.0"
authors = ["jtexeira <a85504@alunos.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
url = {version = "*", features = ["serde"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
